--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "client",
+  "author": "Ilyas Assainov",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.2.1",
+    "prop-types": "^15.6.2",
     "react": "^16.7.0",
+    "react-bootstrap": "^1.0.0-beta.5",
+    "react-datepicker": "^2.0.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-redux": "^6.0.0",
+    "react-scripts": "2.1.3",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
